--- a/enterpriseDailySystem/dailySystem/templates/login.html
+++ b/enterpriseDailySystem/dailySystem/templates/login.html
@@ -35,7 +35,7 @@
 </style>
 <body>
     <h1>登录页面</h1>
-    <form method = 'post' enctype="multipart/form-data">
+    <form method = 'POST' enctype="multipart/form-data">
         {% csrf_token %}
         {{userform.as_p}}
         <input type="submit" value = "登录" />
