--- a/enterpriseDailySystem/dailySystem/templates/index.html
+++ b/enterpriseDailySystem/dailySystem/templates/index.html
@@ -3,10 +3,31 @@
 {% block title %} 首页 {% endblock title %}
 
 
-{% block content %}
+
+{%block left%}
+<ul>
+    <li>员工编号：{{employee.employeeID}}</li>
+    <li>员工姓名：{{employee.employeeName}}</li>
+    {%if sex == 'male'%}
+        <li>员工性别：男</li>
+    {%else%}
+        <li>员工性别：女</li>
+    {%endif%}
+    <li>出生年月：{{employee.employeeBirth|date:"Y-m-d"}}</li>
+    <li>办公室电话：{{employee.employeePhone}}</li>
+    <li>住址：{{employee.employeePlace}}</li>
+    {%if employee.isLead == True%}
+        <li>管理层领导:是</li>
+    {%else%}
+        <li>管理层领导:不是</li>
+    {%endif%}
+</ul>
+{%endblock%}
+
+{% block right %}
 <ul>
     {%for message in messages%}
         <li><a href="{{message.get_absolute_url}}">{{message}}</a></li>
     {%endfor%}
 </ul>
-{% endblock content %}
+{% endblock %}
