--- a/enterpriseDailySystem/dailySystem/templates/messageList.html
+++ b/enterpriseDailySystem/dailySystem/templates/messageList.html
@@ -8,7 +8,7 @@
     <ol>
         {%for message in messages%}
         <li>
-            <a href="">{{message.messageTitle}}</a>
+            <a href="{{ message.get_absolute_url }}">{{message.messageTitle}}</a>
             <span>发布者：{{message.employee}}</span>
             <span>发布时间：{{message.publishTime|date:"Y-m-d H:i:s"}}</span>
         </li>
