--- a/mysite/templates/account/login.html
+++ b/mysite/templates/account/login.html
@@ -1,15 +1,30 @@
 {%extends "base.html"%}
+{%load static %}
 {%block title%}Login{%endblock%}
 
-{%block content%}
-    <h1>Login</h1>
-    <br />
-<div class="row text-center vertical-middle-sm" >
 
-    <form action="." method="POST">
+{%block content%}
+
+
+<div class="row text-center vertical-middle-sm" >
+    <h1>Login</h1>
+        <br />
+    <form class="form-horizontal" action="." method="POST">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Login">
+        <!--{{form.as_p}}-->
+        <div class="form-group">
+            <label for="{{form.username.id_for_label}}" class="col-md-5 control-label" style="color:red">
+                <span class="glyphicon glyphicon-user">Username</span>
+            </label>
+            <div class="col-md-6 text-left">{{form.username}}</div>
+        </div>
+        <div class="form-group">
+            <label for="{{form.password.id_for_label}}" class="col-md-5 control-label" style="color:blue">
+                <span class="glyphicon glyphicon-floppy-open">Password</span>
+            </label>
+                <div class="col-md-6 text-left">{{form.password}}</div>
+        </div>
+        <input type="submit" class="btn btn-primary btn-lg" value="Login">
     </form>
 </div>
 {%endblock%}
