--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-{%load staticfiles%}
+{%load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title%}{%endblock%}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">-->
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     {% include "header.html" %}
