--- a/mysite/templates/header.html
+++ b/mysite/templates/header.html
@@ -1,4 +1,4 @@
-{%load staticfiles%}
+{%load static %}
 <div class="container">
 
     <nav class="navbar navbar-default" role="navigation">
@@ -13,10 +13,18 @@
                     <a href="{%url 'blog:blog_title' %}">BLOG</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="{% url 'account:user_login' %}">LOGIN</a>
-                </li>
+            <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
+                {% if user.is_authenticated%}
+                    <li><a href="#">{{user.username}}</a></li>
+                    <li><a href="{%url 'account:user_logout'%}">Logout</a></li>
+                {%else%}
+                     <li>
+                        <a href="{% url 'account:user_login' %}">LOGIN</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'account:user_register' %}">Register</a>
+                    </li>
+                {%endif%}
             </ul>
         </div>
     </nav>
