--- a/enterpriseDailySystem/dailySystem/templates/base.html
+++ b/enterpriseDailySystem/dailySystem/templates/base.html
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>企业日常事务管理系统-{%block title%}{%endblock%}</title>
-		<!--<link rel="stylesheet" type="text/css" href="../static/css/index.css"/>-->
-		{%load staticfiles%} <link rel="stylesheet" href=" {% static 'css/index.css' %}">
-	</head>
-	<body>
-		<header>
-			<div id="img"></div>
-		</header>
-		<nav id="menu">
-	       <a href="#">
-		       <span class="left"></span> 
-				首页 
-	       </a> 
-	       <a href="/messageList">
-		        <span class="left"></span>
-		        消息列表 
-	       </a>
-	       <a href="/messageAdd">
-		   		<span class="left"></span>
-				发布新消息 
-	       </a> 
-	       <a href="/login">
-				<span class="left"></span>
-		   		身份识别 
-	       </a> 
-    </nav>
-		{%block message%}
-		{%endblock%}
-    <section>
-    	<aside id="left">
-    		<div style="text-align: center;">
-    			<span>员工信息</span>
-    		</div>
-    		<div>
-				{%block left%}
-				{%endblock%}
-    		</div>
-    	</aside>
-    	<aside id="right">
-    		<div>
-				{%block right%}
-				{%endblock%}
-			</div>
-    	</aside>
-    </section>
-    
-	</body>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{%block title%}{%endblock%}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <style>
+        body{
+            <!--width:1800px;-->
+            margin:auto;
+        }
+    </style>
+</head>
+<body>
+    {% include "header.html" %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4" style="border:1px solid red">
+                {% block left %}
+                {% endblock %}
+            </div>
+            <div class="col-md-8"  style="border:1px solid red">
+                {% block right %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+    {% include "footer.html" %}
+</body>
 </html>
