--- a/mysite/templates/account/myself.html
+++ b/mysite/templates/account/myself.html
@@ -2,6 +2,33 @@
 {% block title %}my information {% endblock %}
 {% block content %}
 {% load static %}
+<script src="{% static 'cropper/head/jquery.min.js' %}"></script>
+<script src="{% static 'cropper/head/layer.js' %}"></script>
+
+<script src="{% static 'cropper/head/jquery.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'cropper/css/bootstrap.min.css'%}">
+<link rel="stylesheet" href="{% static 'cropper/head/cropper.min.css'%}">
+<link rel="stylesheet" href="{% static 'cropper/head/sitelogo.css'%}">
+<link rel="stylesheet" href="{% static 'cropper/css/font-awesome.min.css'%}">
+
+<script src="{% static 'cropper/head/bootstrap.min.js' %}"></script>
+<script src="{% static 'cropper/head/cropper.js' %}"></script>
+<script src="{% static 'cropper/head/sitelogo.js' %}"></script>
+<script src="{% static 'cropper/head/csrf.js' %}"></script>
+
+
+
+
+<script>
+    function upload_image_layer(){
+        layer.open({
+        title:"上传头像",
+        area:['850px','600px'],
+        type:2,
+            content:"{% url 'account:my_image' %}",
+        });
+    }
+</script>
 <div class="row text-center vertical-middle-sm">
     <h1>My information</h1>
     <div class="row">
@@ -45,10 +72,15 @@
         </div>
         <div class="col-md-6">
             <div style="margin-right:100px">
-                <img src="{% static 'img/logo.png' %}" alt="头像" class="img-circle" width="270px" id="my_photo">
+                {% if userinfo.photo %}
+                    <img src="{{ userinfo.photo | striptags}}" alt="头像" class="img-circle" width="270px" id="my_photo" name="user_face">
+                {% else %}
+                    <img src="{% static 'images/logo.png' %}" alt="" class="img-circle" name="user_face" id="my_photo">
+                {% endif %}
             </div>
             <div style="margin-right:100px">
                 <button  class="btn btn-primary btn-lg" id="upload_image" onclick="upload_image_layer()">upload my photo</button>
+                <!--<button type="button" class="btn btn-primary"  data-toggle="modal" data-target="#avatar-modal" style="margin: 10px;">修改头像</button>-->
             </div>
         </div>
     </div>
@@ -65,3 +97,145 @@
 
 </div>
 {% endblock %}
+
+
+
+<!--<body>-->
+<!--<center>-->
+<!--&lt;!&ndash;<button type="button" class="btn btn-primary"  data-toggle="modal" data-target="#avatar-modal" style="margin: 10px;">修改头像</button>&ndash;&gt;-->
+<!--</center>-->
+<!--<div class="user_pic" style="margin: 10px;">-->
+	<!--<img src="">-->
+<!--</div>-->
+
+<!--<div class="modal fade" id="avatar-modal" aria-hidden="true" aria-labelledby="avatar-modal-label" role="dialog" tabindex="1                                                                                   ">-->
+	<!--<div class="modal-dialog modal-lg">-->
+		<!--<div class="modal-content">-->
+			<!--&lt;!&ndash;<form class="avatar-form" action="upload-logo.php" enctype="multipart/form-data" method="post">&ndash;&gt;-->
+			<!--<form class="avatar-form">-->
+				<!--<div class="modal-header">-->
+					<!--<button class="close" data-dismiss="modal" type="button">&times;</button>-->
+					<!--<h4 class="modal-title" id="avatar-modal-label">上传图片</h4>-->
+				<!--</div>-->
+				<!--<div class="modal-body">-->
+					<!--<div class="avatar-body">-->
+						<!--<div class="avatar-upload">-->
+							<!--<input class="avatar-src" name="avatar_src" type="hidden">-->
+							<!--<input class="avatar-data" name="avatar_data" type="hidden">-->
+							<!--<label for="avatarInput" style="line-height: 35px;">图片上传</label>-->
+							<!--<button class="btn btn-danger"  type="button" style="height: 35px;" onClick="$('input[id=avatarInput]').click();">请选择图片</button>-->
+							<!--<span id="avatar-name"></span>-->
+							<!--<input class="avatar-input hide" id="avatarInput" name="avatar_file" type="file"></div>-->
+						<!--<div class="row">-->
+							<!--<div class="col-md-6">-->
+								<!--<div class="avatar-wrapper"></div>-->
+							<!--</div>-->
+							<!--<div class="col-md-6">-->
+								<!--<div class="avatar-preview preview-lg" id="imageHead"></div>-->
+								<!--&lt;!&ndash;<div class="avatar-preview preview-md"></div>-->
+						<!--<div class="avatar-preview preview-sm"></div>&ndash;&gt;-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--<div class="row avatar-btns">-->
+							<!--<div class="col-md-4">-->
+								<!--<div class="btn-group">-->
+									<!--<button class="btn btn-danger fa fa-undo" data-method="rotate" data-option="-90" type="button" title="Rotate -90 degrees"> 向左旋转</button>-->
+								<!--</div>-->
+								<!--<div class="btn-group">-->
+									<!--<button class="btn  btn-danger fa fa-repeat" data-method="rotate" data-option="90" type="button" title="Rotate 90 degrees"> 向右旋转</button>-->
+								<!--</div>-->
+							<!--</div>-->
+							<!--<div class="col-md-5" style="text-align: right;">-->
+								<!--<button class="btn btn-danger fa fa-arrows" data-method="setDragMode" data-option="move" type="button" title="移动">-->
+								<!--<span class="docs-tooltip" data-toggle="tooltip" title="" data-original-title="$().cropper(&quot;setDragMode&quot;, &quot;move&quot;)">-->
+								<!--</span>-->
+							  <!--</button>-->
+							  <!--<button type="button" class="btn btn-danger fa fa-search-plus" data-method="zoom" data-option="0.1" title="放大图片">-->
+								<!--<span class="docs-tooltip" data-toggle="tooltip" title="" data-original-title="$().cropper(&quot;zoom&quot;, 0.1)">-->
+								  <!--&lt;!&ndash;<span class="fa fa-search-plus"></span>&ndash;&gt;-->
+								<!--</span>-->
+							  <!--</button>-->
+							  <!--<button type="button" class="btn btn-danger fa fa-search-minus" data-method="zoom" data-option="-0.1" title="缩小图片">-->
+								<!--<span class="docs-tooltip" data-toggle="tooltip" title="" data-original-title="$().cropper(&quot;zoom&quot;, -0.1)">-->
+								  <!--&lt;!&ndash;<span class="fa fa-search-minus"></span>&ndash;&gt;-->
+								<!--</span>-->
+							  <!--</button>-->
+							  <!--<button type="button" class="btn btn-danger fa fa-refresh" data-method="reset" title="重置图片">-->
+									<!--<span class="docs-tooltip" data-toggle="tooltip" title="" data-original-title="$().cropper(&quot;reset&quot;)" aria-describedby="tooltip866214">-->
+							   <!--</button>-->
+							<!--</div>-->
+							<!--<div class="col-md-3">-->
+								<!--<button class="btn btn-danger btn-block avatar-save fa fa-save" type="button" data-dismiss="modal"> 保存修改</button>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</form>-->
+		<!--</div>-->
+	<!--</div>-->
+<!--</div>-->
+
+<!--<div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>-->
+<!--<script src="{% static 'cropper/head/html2canvas.min.js' %}"></script>-->
+<!--&lt;!&ndash;<script src="head/html2canvas.min.js" type="text/javascript" charset="utf-8"></script>&ndash;&gt;-->
+<!--<script type="text/javascript">-->
+<!--//做个下简易的验证  大小 格式-->
+	<!--$('#avatarInput').on('change', function(e) {-->
+		<!--var filemaxsize = 1024 * 5;//5M-->
+		<!--var target = $(e.target);-->
+		<!--var Size = target[0].files[0].size / 1024;-->
+		<!--if(Size > filemaxsize) {-->
+			<!--alert('图片过大，请重新选择!');-->
+			<!--$(".avatar-wrapper").childre().remove;-->
+			<!--return false;-->
+		<!--}-->
+		<!--if(!this.files[0].type.match(/image.*/)) {-->
+			<!--alert('请选择正确的图片!')-->
+		<!--} else {-->
+			<!--var filename = document.querySelector("#avatar-name");-->
+			<!--var texts = document.querySelector("#avatarInput").value;-->
+			<!--var teststr = texts; //你这里的路径写错了-->
+			<!--testend = teststr.match(/[^\\]+\.[^\(]+/i); //直接完整文件名的-->
+			<!--filename.innerHTML = testend;-->
+		<!--}-->
+
+	<!--});-->
+
+	<!--$(".avatar-save").on("click", function() {-->
+		<!--var img_lg = document.getElementById('imageHead');-->
+		<!--// 截图小的显示框内的内容-->
+		<!--html2canvas(img_lg, {-->
+			<!--allowTaint: true,-->
+			<!--taintTest: false,-->
+			<!--onrendered: function(canvas) {-->
+				<!--canvas.id = "mycanvas";-->
+				<!--//生成base64图片数据-->
+				<!--var dataUrl = canvas.toDataURL("image/jpeg");-->
+				<!--var newImg = document.createElement("img");-->
+				<!--newImg.src = dataUrl;-->
+				<!--imagesAjax(dataUrl)-->
+			<!--}-->
+		<!--});-->
+	<!--})-->
+
+	<!--function imagesAjax(src) {-->
+		<!--var data = {};-->
+		<!--data.img = src;-->
+		<!--data.jid = $('#jid').val();-->
+		<!--$.ajax({-->
+			<!--url: '{% url "account:my_image" %}',-->
+			<!--data: data,-->
+			<!--type: "POST",-->
+			<!--dataType: 'json',-->
+			<!--success: function(e) {-->
+                <!--//&lt;!&ndash;location.href="{% url 'account:my_information' %}"&ndash;&gt;-->
+                <!--if (e == "1"){-->
+                    <!--parent.location.reload();-->
+                <!--} else{-->
+                    <!--alert("sorry,you are not lucky.the picutre can't been uploaded")-->
+                <!--}-->
+			<!--},-->
+		<!--});-->
+	<!--}-->
+<!--</script>-->
+
