--- a/mysite/templates/article/column/article_column.html
+++ b/mysite/templates/article/column/article_column.html
@@ -1,10 +1,46 @@
 {% extends "article/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}article column{% endblock %}
 {% block content %}
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/layer.js' %}"></script>
+<script src="{% static 'js/csrf.js' %}"></script>
+<script>
+    function add_column(){
+        var index = layer.open({
+            type:1,
+            skin:"layui-layer-rim",
+            area:["400px","200px"],
+            title:"新增栏目",
+            content:'<div class="text-center" style="margin-top:20px"><p>请输入新的栏目</p><p>{{column_form.column}}</p></div>',
+            btn:["确定","取消"],
+            yes:function(index,layero){
+                column_name = $('#id_column').val();
+                $.ajax({
+                    url:"{% url "article:article_column" %}",
+                    type:"POST",
+                    data:{"column":column_name},
+                    success:function(e){
+                        if(e=="1"){
+                            parent.location.reload();
+                            layer.msg("good");
+                        }else{
+                            layer.msg("此栏目已经存在，请重新输入");
+                        }
+                    },
+                });
+            },
+            btn2:function(index,layero){
+                layer.close(index);
+            }
+
+        });
+    }
+</script>
+
 <div>
     <p class="text-right">
-        <button class="btn btn-primary">add column</button>
+        <button id="add_column" onclick="add_column()" class="btn btn-primary">add column</button>
     </p>
     <table class="table table-hover">
         <tr>
