--- a/mysite/templates/article/header.html
+++ b/mysite/templates/article/header.html
@@ -2,14 +2,14 @@
 <div class="container">
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand"><img src="{% static 'imgages/logo.png' %}" width="100px" alt="xxx"> </a>
+            <a href="#" class="navbar-brand"><img src="{% static 'images/logo.png' %}" width="100px" alt="xxx"> </a>
         </div>
         <div>
             <ul class="nav navbar-nav" role="tablist">
                 <li><a href="{% url 'article:article_column' %}">文章管理</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
-                <li><a href="{% url 'blog:blog_title' %}">网站是首页</a> </li>
+                <li><a href="{% url 'blog:blog_title' %}">网站首页</a> </li>
                 <li> <span>{{ user.username }}</span> </li>
                 <li><a href="{% url 'article:article_column' %}">后台管理</a></li>
                 <li><a href="{% url 'account:user_logout' %}">Logout</a> </li>
