--- a/mysite/templates/article/leftslider.html
+++ b/mysite/templates/article/leftslider.html
@@ -6,5 +6,8 @@
         <p>
             <a href="{% url 'article:article_post' %}">发布文章</a>
         </p>
+        <p>
+            <a href="{% url 'article:article_list' %}">文章列表</a>
+        </p>
     </div>
 </div>
